--- a/HojasDeEstilos/estilosReachYourPyke.css
+++ b/HojasDeEstilos/estilosReachYourPyke.css
@@ -31,15 +31,9 @@ header {
 .topnav {    
     overflow: hidden;
     background-color: black;
-    /* text-align: center;
-    margin-left: 150px;
-    width: 40%;
-    padding-top: 21px;
-    float: left; */
 }
 
 .topnav nav {
-    /* margin-left: 62%; */
     margin-top: 20px;
 }
 
@@ -55,14 +49,11 @@ header {
 nav ul li {
     display: inline-block;
     text-align: center;
+    position: relative;
     margin: 0 2%;
-    /* border-top: 2px solid white; */
-    /* margin-top: 14px; */
 }
 
 .topnav nav ul li a {
-
-    /* display: block; */
     color: #28cc8c;
     text-align: center;
     padding: 3px 2%;
@@ -87,13 +78,12 @@ nav ul li {
     margin-left:150px;
 }
 
-  /* Poner el estilo de dentro de la barra de busqueda */
+/* Poner el estilo de dentro de la barra de busqueda */
 .topnav input[type=text] {
     background-color: #28cc8c;
     padding: 6px;
     border: none;
     font-size: 18px;
-    /* border-radius: 3px; */
     width: 550px;
 }
 
@@ -101,7 +91,6 @@ nav ul li {
   float: right;
   padding: 6px;
   background: #28cc8c;
-  /* margin: 8px 0 0 0px ; */
   font-size: 18px;
   border: none;
   cursor: pointer;
@@ -119,10 +108,6 @@ nav ul li {
     left: 0;
     position: absolute;
     width: 75px;
-    /* height: 75px; */
-    /* object-fit: contain; */
-
-    /* height: 100vh; */
 }
 
 /*** MAIN ***/
@@ -143,11 +128,6 @@ h4 {
     font-style: normal;
 }
 
-h5 {
-    font-size: 12px;
-    color: #B5B2B2;
-}
-
 /*** SECCION INICIO PAGINA ***/
 
 #sectionImagen {
@@ -158,15 +138,16 @@ h5 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    margin-bottom: 40px ;
 }
 
-/*** Titulo de la seccion ***/
+/*** Titulo de la Pagina ***/
 
 #sectionImagen h1 {
     color: white;
     vertical-align: middle;
     font-size: 107px;
-    padding-top: 265px;
+    padding-top: 275px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,6 +199,7 @@ h5 {
 #Planes h4 {
     font-size: 20px;
     padding-top: 50px;
+    color: #696969;
     font-weight: lighter;
     font-style: italic;
     display: flex;
@@ -252,7 +234,6 @@ h5 {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .contenedor .miniContenedores h3 {
@@ -264,13 +245,13 @@ h5 {
 }
 
 .contenedor .miniContenedores p {
-    color: white;
+    color: #696969;
     padding-top: 30px;
     width: 55%;
     text-align: justify;
     margin-left: 100px;
     font-weight: lighter;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 /*** SECCION DE LA TIENDA ***/
@@ -286,12 +267,12 @@ h5 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 100px;
-    padding-bottom: 75px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
-.imagenesTiendaInicio {
-    width: 90%;
+.contenedorTienda img {
+    width: 100%;
     height: 400px;
     object-fit: cover;
 }
@@ -304,15 +285,22 @@ h5 {
 
 .cajasTienda h4{
     background-color: black;
-    width: 90%;
+    padding: 1%;
     padding-left: 10px;
+}
+
+.cajasTienda
+{
+    float: left;
+    margin-right: 30px;
+    background-color: #000000;
 }
 
 .cajasTienda p {
     background-color: black;
     color: rgb(170, 170, 156);
     width: 90%;
-    padding-left: 10px;
+    padding: 5px 0 5px 10px;
 }
 
 #Tienda button {
@@ -335,12 +323,12 @@ h5 {
     background-color: black;
     width: 100%;
     height: 1500px;
-    margin-bottom: 100px;
+    margin-bottom: 170px;
 }
 
 .entradasBlog {
-    display: flex;
-    justify-content: space-evenly; /* Hace que ocupen el espacio que tienen equitativamente */
+    /* justify-content: space-evenly; Hace que ocupen el espacio que tienen equitativamente */
+    position: relative;
     align-items: center;
     width: 50%;
     height: 400px;
@@ -350,14 +338,20 @@ h5 {
 }
 
 .imagenBlog {
-    width: 100%;
-    height: 390px;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    left: 0;
+    top: 0;
 }
 
 .Textos {
+    position: absolute;
     width: 50%;
     padding: 50px 30px 70px 30px;
     text-align: justify;
+    right: 0;
 }
 
 .Textos h3 {
@@ -367,18 +361,20 @@ h5 {
 
 .Textos p {
     font-size: 16px;
-    color: white;
+    color: rgb(170, 170, 156);
     font-style: normal;
     font-weight: 300;
     border-bottom: grey 1px solid;
-    padding-bottom: 120px;
+    padding-bottom: 33%;
 }
 
 .corazon {
-    float: right;
-    margin: 365px 20px 20px 0;
+    float: left;
+    position: absolute;
+    margin: 370px 35px 0 0;
     width: 2%;
     height: 20px;
+    right: 0;
 }
 
 #Blog button {
@@ -400,10 +396,9 @@ h5 {
 
 footer {
     background-color: black;
-    height: 200px;
+    height: 120px;
     width: 100%;
     clear: left;
-    
 }
 
 /*** Flota todos los section del footer ***/
@@ -423,7 +418,7 @@ footer section {
 .logosRedesSociales {
     width: 100%;
     height: 55px;
-    padding-left: 15px; 
+    padding-left: 25px; 
 }
 
 /*** SPEECH ***/
@@ -436,12 +431,13 @@ footer section {
 #gokuTraining {
     border-radius: 50%;
     object-fit: cover;
-    width: 17%;
+    width: 15%;
     height: 130px;
-    margin-right: 10px;
+    margin-left: 130px;
 }
 
 #texto {
+    margin-left: 30px;
     border-left: 5px solid #4864cc;
 }
 
@@ -466,13 +462,20 @@ footer section {
     flex-direction: column; /*para que se coloquen uno abajo del otro*/
     text-align:center;
     height: 200px;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-top: 40px;
 }
 
 .botones {
     width: 100%;
-    height: 65px;
-    background-color: #526427;
+    height: 45px;
     font-size: 18px;
+}
+
+.botones p 
+{
+    color: #28cc8c;
 }
 
 .botones a {
@@ -480,24 +483,32 @@ footer section {
     color: white;
 }
 
-/* Copyright */
-#motivationalSpeech h5 {
-    margin-top: 150px;
+.botones p:hover 
+{
+    color: white;
 }
 
-/* Metodos de pago */
+footer h5 {
+    float: left;
+    margin-top: 135px;
+    font-size: 12px;
+    color: #28cc8c;
+    width: 50px;
+}
+
+/* Metodos de pago
 #metodosPago {
     margin-left: 50px;
     margin-top: 70px;
-}
+} */
 
 /********** Menu desplegable **********/
 .topnav nav ul ul 
 {
     display:none; /* Escondemos el submenu mediante display:none */
     position:absolute;
-    top:50%;
-    right:135px;
+    top: calc(5vh - 20px);
+    right:45px; 
     padding:0;
 }
 
