--- a/HojasDeEstilos/estilosReachYourPyke.css
+++ b/HojasDeEstilos/estilosReachYourPyke.css
@@ -1,8 +1,9 @@
 /*** Reseteo Propiedades ***/
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
     /* Hace que la transicion sea fluida y menos brusca */
     scroll-behavior: smooth;
     text-decoration: none;
@@ -11,7 +12,8 @@
 /*** BODY ***/
 body {
     background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
+    overflow-x: hidden; 
 }
 
 /*** HEADER ***/
@@ -20,10 +22,13 @@ header {
     width: 100%;
     height: 75px;
     /* Hace que toda la navegacion se quede fija en la pantalla */
+    position: sticky;
     position: fixed;
-    top: 0;
-    /* z-index: 100; */
+    top: 0;    
     background-color: black;
+    margin: 0;
+    z-index: 5;
+    box-shadow: 0 0 3px 3px #1a1a1a
 }
 
 /*** BARRA BUSQUEDA ***/
@@ -58,8 +63,6 @@ nav ul li {
     text-align: center;
     padding: 3px 2%;
     font-size: 20px;
-    margin-top: 10px;
-
 }
  
 
@@ -110,7 +113,6 @@ nav ul li {
     width: 75px;
 }
 
-/*** MAIN ***/
 /*** Fijo las caracteristicas de los titulos ***/
 h2 {
     font-size: 56px;
@@ -131,7 +133,7 @@ h4 {
 /*** SECCION INICIO PAGINA ***/
 
 #sectionImagen {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     width: 100%;
     height: 100vh;
     background-image: url(../images/gimnasio.jpg);
@@ -210,16 +212,16 @@ h4 {
 .imagenesPlanes {
     border-radius: 50%; /* Redondear las imagenes */ 
     object-fit: cover; /* Para que coja la imagen tal cual las dimensiones con buena calidad */
-    width: 45%;
+    width: 225px;
     height: 225px;
-    margin: 65px 125px;
+    margin: 65px 150px;
     margin-bottom: 40px;
 }
 
 .contenedor {
-    width: 80%;
+    width: 100%;
     height: 800px;
-    margin-left: 10%;
+    /* margin-left: 10%; */
 }
 
 .contenedor .miniContenedores {
@@ -242,6 +244,7 @@ h4 {
     justify-content: center;
     padding-top: 20px;
     font-size: 30px;
+    margin-right: 50px;
 }
 
 .contenedor .miniContenedores p {
@@ -292,7 +295,7 @@ h4 {
 .cajasTienda
 {
     float: left;
-    margin-right: 30px;
+    margin: 0 15px;
     background-color: #000000;
 }
 
@@ -313,6 +316,12 @@ h4 {
     padding: 13px 50px;
 }
 
+#Tienda button:hover
+{
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 20px 25px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 #Tienda button a {
     text-decoration: none;
 }
@@ -322,8 +331,8 @@ h4 {
 #Blog {
     background-color: black;
     width: 100%;
-    height: 1500px;
-    margin-bottom: 170px;
+    height: 1460px;
+    margin-bottom: 120px;
 }
 
 .entradasBlog {
@@ -349,14 +358,15 @@ h4 {
 .Textos {
     position: absolute;
     width: 50%;
-    padding: 50px 30px 70px 30px;
+    padding: 50px 30px 70px 20px;
     text-align: justify;
     right: 0;
 }
 
 .Textos h3 {
     font-size: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 .Textos p {
@@ -364,18 +374,18 @@ h4 {
     color: rgb(170, 170, 156);
     font-style: normal;
     font-weight: 300;
-    border-bottom: grey 1px solid;
-    padding-bottom: 33%;
+    padding-bottom: 80px;
 }
 
-.corazon {
+/* HACER LAS SECCIONES CON LOS ICONOS */
+/* .corazon {
     float: left;
     position: absolute;
     margin: 370px 35px 0 0;
     width: 2%;
     height: 20px;
     right: 0;
-}
+} */
 
 #Blog button {
     background-color: #526427;
@@ -388,6 +398,11 @@ h4 {
     text-decoration: none;
 }
 
+#Blog button:hover {
+    box-shadow: #526427 0px 10px 15px, #526427 0px -12px 30px, #526427 0px 4px 6px, #526427 0px 12px 13px, #526427 0px -3px 5px;
+    cursor: pointer;
+}
+
 #Blog button a{
     text-decoration: none;
 }
@@ -396,48 +411,44 @@ h4 {
 
 footer {
     background-color: black;
-    height: 120px;
     width: 100%;
-    clear: left;
 }
-
-/*** Flota todos los section del footer ***/
-footer section {
-    float: left
-}
-
 
 /*** REDES SOCIALES ***/
 #socialNetworks {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 60px 50px;
+    margin: 0 40px;
+    width: 30%;
 }
 
 .logosRedesSociales {
-    width: 100%;
     height: 55px;
-    padding-left: 25px; 
+    padding-left: 35px; 
+    margin-bottom: 35px;
+    object-fit: cover;
 }
 
 /*** SPEECH ***/
 #motivationalSpeech {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    padding-bottom: 20px;
 }
 
 #gokuTraining {
-    border-radius: 50%;
+    border-radius: 100%;
     object-fit: cover;
-    width: 15%;
+    width: 130px;
     height: 130px;
-    margin-left: 130px;
+    margin-left: 100px;
 }
 
 #texto {
-    margin-left: 30px;
+    margin-left: 5%;
     border-left: 5px solid #4864cc;
 }
 
@@ -451,56 +462,54 @@ footer section {
     margin-top: 10px;
     margin-left: 10px;
     font-weight: lighter;
-    color: white;
+    font-style: oblique;
+    color: rgb(170, 170, 156);
 }
 
-/*** BOTONES FAQ, Devoluciones y Atencion al cliente ***/
-
-#Buttons {
-    align-items: center; /*para centrarlos verticalmente*/
-    justify-content: center;
-    flex-direction: column; /*para que se coloquen uno abajo del otro*/
-    text-align:center;
-    height: 200px;
-    margin-left: 70px;
-    margin-right: 70px;
-    margin-top: 40px;
-}
-
-.botones {
+#footer 
+{
     width: 100%;
-    height: 45px;
+    margin-top: 50px;
+    justify-content: space-evenly;
+}
+
+.sectionFooter
+{
+    float: left;
+    width: 30%;
+}
+
+#footer small
+{
+    width: 20%;
+    padding-top: 15px;
+    color: #28cc8c;
+    bottom: 0;
+    text-align: center;
+}
+
+#footer ul 
+{
+    padding-top: 15px;
+    width: 40%;
+}
+
+#footer ul li
+{
+    display: inline-block;
+    margin-right: 8%;
+}
+
+#footer ul li a
+{
+    color: #28cc8c;
     font-size: 18px;
 }
 
-.botones p 
-{
-    color: #28cc8c;
-}
-
-.botones a {
-    text-decoration: none;
-    color: white;
-}
-
-.botones p:hover 
+#footer ul li a:hover
 {
     color: white;
 }
-
-footer h5 {
-    float: left;
-    margin-top: 135px;
-    font-size: 12px;
-    color: #28cc8c;
-    width: 50px;
-}
-
-/* Metodos de pago
-#metodosPago {
-    margin-left: 50px;
-    margin-top: 70px;
-} */
 
 /********** Menu desplegable **********/
 .topnav nav ul ul 
@@ -508,8 +517,8 @@ footer h5 {
     display:none; /* Escondemos el submenu mediante display:none */
     position:absolute;
     top: calc(5vh - 20px);
-    right:45px; 
     padding:0;
+    right: 45px;
 }
 
 .topnav nav ul ul li {
@@ -541,15 +550,17 @@ footer h5 {
 /*******************TABLETS*******************/
 @media (max-width: 1300px)
 {
+    /********* NAV **********/
     /* Vuelvo a colocar en su sitio los submenus */
     .topnav nav ul ul {
-        right: -93px;
+        right: 23px;
+        top: calc(5vh - 25px);
     }
 
 
     .topnav nav ul li a
     {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .topnav 
@@ -567,7 +578,7 @@ footer h5 {
 
     .topnav ul li
     {
-        margin: 0 5px;
+        margin: 0 8px;
     }
 
     .topnav input[type=text]
@@ -579,6 +590,153 @@ footer h5 {
     .topnav .contenedor_BarraBusqueda
     {
         margin-left: 100px ;
+    }
+
+    /********** First Section **********/
+    #sectionImagen h1
+    {
+        font-size: 90px;
+    }
+
+    /********* Plans Section **********/
+    #Planes
+    {
+        height: 800px;
+    }
+
+    #Planes h2
+    {
+        font-size: 50px;
+    }
+
+    #Planes h4
+    {
+        margin-bottom: 40px;
+    }
+
+    .imagenesPlanes
+    {
+        height: 180px;
+        width: 180px;
+        margin: 55px 100px;
+        text-align: center;
+    }
+
+    .contenedor
+    {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .contenedor .miniContenedores h3
+    {
+        padding-top: 0;
+        font-size: 25px;
+    }
+
+    .contenedor .miniContenedores p
+    {
+        width: 65%;
+        font-size: 18px;
+        margin-left: 60px;
+        text-align: center;
+    }
+
+    /********** SHOP **********/
+
+    #Tienda
+    {
+        height: 750px;
+        width: 100%;
+    }
+
+    #Tienda h2
+    {
+        font-size: 75px;
+    }
+
+    .contenedorTienda img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+
+    #Tienda button 
+    {
+        margin-top: 70px;
+        padding: 30px 85px;
+    }
+
+    /********** BLOG **********/
+    #Blog
+    {
+        height: 1450px;
+        width: 100%;
+    }
+
+    .entradasBlog
+    {
+        width: 70%;
+        margin-left: 13%;
+    }
+
+    .Textos h3
+    {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    #Blog button 
+    {
+        margin-top: 75px;
+        padding: 25px 70px;
+    }
+
+    /********** FOOTER **********/
+    #motivationalSpeech
+    {
+        width: 100%;
+        padding-top: 50px;
+    }
+
+    #texto
+    {
+        margin-left: 0;
+        padding-left: 20px;
+    }
+
+    #socialNetworks
+    {
+        width: 40%;
+        float: left;
+        margin: 0;
+    }
+
+    .logosRedesSociales
+    {
+        padding-left: 85px;
+    }
+
+    footer small
+    {
+        display: none;
+    }
+
+    #footer ul 
+    {
+        margin-left: 75px;
+        width: 50%;
+    }
+
+    #footer ul li 
+    {
+        margin-right: 15px;
+    }
+
+    #footer ul li a 
+    {
+        font-size: 24px;
     }
 }
 /*******************Mobile devices*******************/
@@ -657,5 +815,164 @@ footer h5 {
         right: 0;
     }
 
-    
+    /********** First Section **********/
+    #sectionImagen h1
+    {
+        font-size: 80px;
+        text-align: center;
+    }
+
+    /********* Planes Entrenamiento *********/
+    #Planes
+    {
+        height: 1100px;
+        width: 100%;
+    }
+
+    #Planes h2
+    {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    #Planes h4 
+    {
+        font-size: 25px;
+        padding-top: 40px;
+    }
+
+    .imagenesPlanes
+    {
+        text-align: center;
+        margin: 30px 39%;
+    }
+
+    .contenedor .miniContenedores
+    {
+        width: 100%;
+        height: 300px;
+    }
+
+    .contenedor .miniContenedores p 
+    {
+        display: none;
+    }
+
+    .contenedor .miniContenedores h3 
+    {
+        text-align: center;
+        margin:0 25%;
+    }
+
+    /********** TIENDA **********/
+    #Tienda 
+    {
+        height: 1040px;
+        width: 100%;
+    }
+
+    #Tienda h2 
+    {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .contenedorTienda
+    {
+        display: inline-block;
+        justify-content: space-evenly;
+    }
+
+    .cajasTienda 
+    {
+        width: 45%;
+        border: 1px solid white;
+        margin: 20px 15px;
+    }
+
+    .cajasTienda img 
+    {
+        border-bottom: 1px solid white;
+    }
+
+    #Tienda button 
+    {
+        margin-top: 30px;
+    }
+
+    /********** BLOG **********/
+    #Blog 
+    {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .entradasBlog
+    {
+        width: 70%;
+        height: 350px;
+    }
+
+    .Textos h3 
+    {
+        font-size: 20px;
+    }
+
+    .Textos p 
+    {
+        font-size: 14px;
+    }
+
+    /********* FOOTER *********/
+    #socialNetworks 
+    {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .logosRedesSociales
+    {
+        height: 80px;
+    }
+
+    #gokuTraining 
+    {
+        width: 140px;
+        height: 140px;
+        margin-left: 20px;
+    }
+
+    #texto
+    {
+        margin-left: 20px;
+        border-left: 3px solid #4864cc ;
+    }
+
+    #texto h4 
+    {
+        font-size: 16px;
+    }
+
+    #texto p 
+    {
+        font-size: 15px;
+    }
+
+    #footer ul 
+    {
+        width: 100%;
+        margin-bottom: 50px;
+        padding-right: 40px;
+    }
+
+    #footer ul li 
+    {
+        margin-left: 3%;
+    }
+
+    #footer ul li a 
+    {
+        font-size: 26px;
+    }
+
 }
