--- a/HojasDeEstilos/estilosReachYourPyke.css
+++ b/HojasDeEstilos/estilosReachYourPyke.css
@@ -976,3 +976,79 @@ footer {
     }
 
 }
+
+@media (max-width: 370px)
+{
+    /* FIRST SECTION */
+    #sectionImagen 
+    {
+        width: 100%;
+    }
+
+    /* PLANS SECTION */
+    #Planes
+    {
+        width: 100%;
+        height: 1150px;
+    }
+
+    .imagenesPlanes 
+    {
+        margin: 65px 20px ;
+    }
+
+    /* SHOP */
+    #Tienda
+    {
+        width: 100%;
+    }
+
+    #Tienda h2 
+    {
+        font-size: 65px;
+    }
+
+    .cajasTienda 
+    {
+        width: 45%;
+        margin: 10px 10px;
+    }
+
+    .contenedorTienda img 
+    {
+        height: 200px;
+    }
+
+    /* BLOG */
+    #Blog
+    {
+        width: 100%;
+    }
+
+    .entradasBlog
+    {
+        width: 85%;
+        margin-left: 5%;
+    }
+
+    .Textos h3 
+    {
+        font-size: 24px;
+    }
+
+    #Blog button 
+    {
+        margin-left: 50%;
+    }
+
+    /* FOOTER */
+    #footer ul 
+    {
+        width: 100%;
+    }
+
+    #footer ul li 
+    {
+        text-align: center;
+    }
+}
